[metadata]
name = llvmbuild
version = 1.0.0
author = Guilherme Valarini
author_email = guilherme.a.valarini@gmail.com
description = A helper tool to build llvm

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    gitpython
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    llvm-build = llvmbuild.cli:cli
